--- a/games.html
+++ b/games.html
@@ -21,7 +21,7 @@
 				Fall Schedule
 			</h2>
 			<h3>* All games take place on Saturday.</h3>
-		<div id="table">
+		<main id="table">
 			<table>
 				<thead>
 					<tr>
@@ -41,118 +41,118 @@
 				</thead>
 				<tbody>
 					<tr>
-						<th rowspan="2">
+						<td rowspan="2">
 							9/01
-						</th>
-						<th>
+						</td>
+						<td>
 							U1 and U4
-						</th>
-						<th>
+						</td>
+						<td>
 							AJ Katzenmaier
-						</th>
-						<th>
+						</td>
+						<td>
 							9:30 a.m.
-						</th>
+						</td>
 					</tr>
 					<tr>
-						<th>
+						<td>
 							U3 and U2
-						</th>
-						<th>
+						</td>
+						<td>
 							Greenbay 
-						</th>
-						<th>
+						</td>
+						<td>
 							1:00 p.m.
-						</th>
+						</td>
 					</tr>
 					<tr>
-						<th rowspan="2">
+						<td rowspan="2">
 							9/08
-						</th>
-						<th>
+						</td>
+						<td>
 							U5 and U6
-						</th>
-						<th>
+						</td>
+						<td>
 							Howard A Yeager
-						</th>
-						<th>
+						</td>
+						<td>
 							9:30 a.m.
-						</th>
+						</td>
 					</tr>
 					<tr>
-						<th>
+						<td>
 							U6 and U1 
-						</th>
-						<th>
+						</td>
+						<td>
 							Marjorie P Hart
-						</th>
-						<th>
+						</td>
+						<td>
 							1:00 p.m.
-						</th>
+						</td>
 					</tr>
 					<tr>
-						<th rowspan="2">
+						<td rowspan="2">
 							9/15
-						</th>
-						<th>
+						</td>
+						<td>
 							U2 and U4
-						</th>
-						<th>
+						</td>
+						<td>
 							North 
-						</th>
-						<th>
+						</td>
+						<td>
 							9:30 a.m.
-						</th>
+						</td>
 					</tr>
 					<tr>
-						<th>
+						<td>
 							U3 and U5
-						</th>
-						<th>
+						</td>
+						<td>
 							AJ Katzenmaier
-						</th>
-						<th>
+						</td>
+						<td>
 							1:00 p.m
-						</th>
+						</td>
 					</tr>
 					<tr>
-						<th rowspan="2">
+						<td rowspan="2">
 							9/22
-						</th>
-						<th>
+						</td>
+						<td>
 							U1 and U3
-						</th>
-						<th>
+						</td>
+						<td>
 							South
-						</th>
-						<th>
+						</td>
+						<td>
 							9:30 a.m
-						</th>
+						</td>
 					</tr>
 					<tr>
-						<th>
+						<td>
 							U2 and U6
-						</th>
-						<th>
+						</td>
+						<td>
 							Howard A Yeager
-						</th>
-						<th>
+						</td>
+						<td>
 							1:00 p.m.
-						</th>
+						</td>
 					</tr>
 					<tr>
-						<th>
+						<td>
 							9/29
-						</th>
-						<th>
+						</td>
+						<td>
 							U4 and U5
-						</th>
-						<th>
+						</td>
+						<td>
 							Greenbay 
-						</th>
-						<th>
+						</td>
+						<td>
 							9:30 a.m.
-						</th>
+						</td>
 					</tr>
 				</tbody>
 			</table>
@@ -175,104 +175,104 @@
 				</thead>
 				<tbody>
 					<tr>
-						<th rowspan="2">
+						<td rowspan="2">
 							10/06
-						</th>
-						<th>
+						</td>
+						<td>
 							U2 and U5
-						</th>
-						<th>
+						</td>
+						<td>
 							Marjorie P Hart
-						</th>
-						<th>
+						</td>
+						<td>
 							9:30 a.m
-						</th>
+						</td>
 					</tr>
 					<tr>
-						<th>
+						<td>
 							U1 and U6
-						</th>
-						<th>
+						</td>
+						<td>
 							South
-						</th>
-						<th>
+						</td>
+						<td>
 							1:00 p.m.
-						</th>
+						</td>
 					</tr>
 					<tr>
-						<th rowspan="2">
+						<td rowspan="2">
 							10/13
-						</th>
-						<th>
+						</td>
+						<td>
 							U3 and U4
-						</th>
-						<th>
+						</td>
+						<td>
 							Howard A Yeager 
-						</th>
-						<th>
+						</td>
+						<td>
 							9:30 a.m.
-						</th>
+						</td>
 					</tr>
 					<tr>
-						<th>
+						<td>
 							U5 and U1 
-						</th>
-						<th>
+						</td>
+						<td>
 							Greenbay 
-						</th>
-						<th>
+						</td>
+						<td>
 							1:00 p.m.
-						</th>
+						</td>
 					</tr>
 					<tr>
-						<th rowspan="2">
+						<td rowspan="2">
 							10/20
-						</th>
-						<th>
+						</td>
+						<td>
 							U6 and U3
-						</th>
-						<th>
+						</td>
+						<td>
 							North 
-						</th>
-						<th>
+						</td>
+						<td>
 							9:30 a.m.
-						</th>
+						</td>
 					</tr>
 					<tr>
-						<th>
+						<td>
 							U2 and U4
-						</th>
-						<th>
+						</td>
+						<td>
 							Marjorie P Hart 
-						</th>
-						<th>
+						</td>
+						<td>
 							1:00 p.m.
-						</th>
+						</td>
 					</tr>
 					<tr>
-						<th rowspan="2">
+						<td rowspan="2">
 							10/27
-						</th>
-						<th>
+						</td>
+						<td>
 							U3 and U1
-						</th>
-						<th>
+						</td>
+						<td>
 							AJ Katzenmaier
-						</th>
-						<th>
+						</td>
+						<td>
 							9:30 a.m.
-						</th>
+						</td>
 					</tr>
 					<tr>
-						<th>
+						<td>
 							U5 and U6
-						</th>
-						<th>
+						</td>
+						<td>
 							Howard A Yeager
-						</th>
-						<th>
+						</td>
+						<td>
 							1:00 p.m.
-						</th>
+						</td>
 					</tr>
 				</tbody>
 			</table>
@@ -280,67 +280,69 @@
 				<thead>
 					<tr>
 						<th colspan="2">
-							Game Locations:
+							Game Locations
 						</th>
 					</tr>
 				</thead>
 				<tbody>
 					<tr>
-						<th>
+						<td>
 							AJ Katzenmaier Elementary
-						</th>
-						<th>
+						</td>
+						<td>
 							24 W. Walton St., Chicago, IL 60610
-						</th>
+						</td>
 					</tr>
 					<tr>
-						<th>
+						<td>
 							Greenbay Elementary
-						</th>
-						<th>
+						</td>
+						<td>
 							1734 N. Orleans St., Chicago, IL 60614
-						</th>
+						</td>
 					</tr>
 					<tr>
-						<th>
+						<td>
 							Howard A Yeager Elementary
-						</th>
-						<th>
+						</td>
+						<td>
 							2245 N. Southport Ave., Chicago, IL 60614
-						</th>
+						</td>
 					</tr>
 					<tr>
-						<th>
+						<td>
 							Marjorie P Hart Elementary
-						</th>
-						<th>
+						</td>
+						<td>
 							2625 N. Orchard St., Chicago, IL 60614
-						</th>
+						</td>
 					</tr>
 					<tr>
-						<th>
+						<td>
 							North Elementary
-						</th>
-						<th>
+						</td>
+						<td>
 							1409 N. Ogden Ave., Chicago, IL 60610
-						</th>
+						</td>
 					</tr>
 					<tr>
-						<th>
+						<td>
 							South Elementary
-						</th>
-						<th>
+						</td>
+						<td>
 							2101 N. Fremont St., Chicago, IL 60614
-						</th>
+						</td>
 					</tr>
 				</tbody>
 			</table>
-			<h4><strong>Facility Type:</strong> Outdoor</h4>
-			<h4><strong>Additional Information:</strong> If deemed necessary by NYSL, games may be shortened or cancelled due to extreme weather conditions. </h4>
-			<h4><strong>Please direct all questions to:</strong> Michael Randall, League Coordinator 
-			</h4>
-			<h4><strong>Phone:</strong>(630) 690-8132</h4>
-			<h4><strong>Email:</strong>michael.randall@chisoccer.org</h4>
-		</div>
+				<h4><strong>Facility Type:</strong> Outdoor</h4>
+				<h4><strong>Additional Information:</strong> If deemed necessary by NYSL, games may be shortened or cancelled due to extreme weather conditions. </h4>
+				<h4><strong>Please direct all questions to:</strong> Michael Randall, League Coordinator 
+				</h4>
+			<article id="article">
+				<h4><strong>Phone:</strong>(630) 690-8132</h4>
+				<h4><strong>Email:</strong><a href="mailto:michael.randall@chisoccer.org">michael.randall@chisoccer.org</a></h4>
+			</article>
+		</main>
 	</body>
 </html>
